# simsapa

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  Simsapa Dhamma Reader.spec  build_dmg.sh  dmgbuild_settings.py  dodo.py  dotenv-example  logging.yaml  nuitka_build.bat  nuitka_build.sh  package-lock.json  package.json  pyinstaller-build.bat  pyinstaller-build.sh  pyinstaller_build.bat  pyinstaller_build.sh  pyinstaller_build_macos_arm64.sh  pyproject.toml  requirements-windows.txt  requirements.txt  run.py  run.spec  simsapa.spec  webpack.config.js
.github/workflows/: briefcase_build.yml  ci.yml  pre-commit.yml  pyinstaller_build.yml
docs/: development-running-from-source.md  index.md  install-linux.md  install-macos.md  install-windows.md
scripts/: bootstrap-appdata-db.py  bootstrap-appdata.sh  bootstrap.py  bootstrap_appdata.py  bootstrap_appdata.sh  bootstrap_appdata_db.py  bootstrap_db.sh  bootstrap_dpd_db.sh  bootstrap_suttas_lang.py  buddha_ujja.py  build_dmg.sh  commentary_definitions.py  create_links.py  cst4-suttas-convert-to-roman.py  cst4.py  cst4_suttas_convert_to_roman.py  dhammapada_munindo.py  dhammapada_tipitaka_net.py  dhammatalks_org.py  dpd.py  dppn.py  extract_html_from_stardict.py  helpers.py  icons_assets.sh  multi_refs.py  nyanadipa.py  nyanatiloka.py  nyanatiloka_legacy.py  profile_time_chart.gp  query_test.nu  remove_log.py  sanskrit-create-stardict.py  sanskrit-html-export.py  sanskrit_html_export.py  sanskrit_texts.py  suttacentral.py  tantivy_index.py
simsapa/: __init__.py  __main__.py  alembic.ini  cli.py  gui.py  logger.py  runner.py  splash.py  time_log.py
simsapa/alembic/: env.py
simsapa/alembic/versions/: 2fb9e9700134_challenges.py  4b7baadaa0bd_challenges.py  5aaa36ccfa37_baseline.py  5e7020fe0503_bookmarks_table.py  7f62ef55eda9_page_nodes.py  92e01c50ebc0_sutta_content_json.py  d86819659876_baseline.py
simsapa/app/: actions_manager.py  api.py  app_data.py  check_dpd_updates_worker.py  check_simsapa_updates_worker.py  check_updates_worker.py  completion_cache_worker.py  completion_lists.py  db_helpers.py  db_models.py  db_session.py  dict_link_helpers.py  dir_helpers.py  dpd_render.py  export_helpers.py  file_doc.py  graph.py  helpers.py  hotkeys_manager_interface.py  hotkeys_manager_linux.py  hotkeys_manager_windows_mac.py  html_resources_server.py  lookup.py  pali_stemmer.py  pitaka_groups.py  simsapa_smtp.py  stardict.py  types.py  windows.py
simsapa/app/db/: appdata_models.py  dpd_models.py  search.py  search_helpers.py  search_tantivy.py  stardict.py  userdata_models.py
simsapa/app/search/: dictionary_queries.py  helpers.py  queries.py  query_task.py  query_worker.py  sutta_queries.py  tantivy_index.py
simsapa/assets/: icons.qrc  icons_rc.py  releases_fallback.json
simsapa/assets/css/: dictionary.css  ebook_extra.css  main.css  suttas.css
simsapa/assets/icons/: svg_to_png.sh
simsapa/assets/js/: dictionary.js  ebook_extra.js  simsapa.min.js  suttas.js
simsapa/assets/sass/: _base.sass  _button_shadow.scss  _cst4.sass  _dhammatalks_org.sass  _gretil_post.sass  _ssp_button.scss  _suttacentral.sass  _tipitaka_net.sass  _type_abhaya_libre.scss  _type_crimson_pro.scss  _type_source_sans_3.scss  _type_source_sans_pro.scss  dictionary.sass  ebook_extra.sass  main.sass  suttas.sass
simsapa/assets/templates/: click_generate.html  icons.html  loading.html  open_sutta_links.js  page.html
simsapa/assets/ui/: cards_browser_window.ui  cards_browser_window_ui.py  dictionaries_manager_window.ui  dictionaries_manager_window_ui.py  dictionary_search_window.ui  dictionary_search_window_ui.py  document_reader_window.ui  document_reader_window_ui.py  import_stardict_dialog.ui  import_stardict_dialog_ui.py  library_browser_window.ui  library_browser_window_ui.py  links_browser_window.ui  links_browser_window_ui.py  memos_browser_window.ui  memos_browser_window_ui.py  notes_browser_window.ui  notes_browser_window_ui.py  sutta_search_window.ui  sutta_search_window_ui.py  sutta_study_window.ui  sutta_study_window_ui.py
simsapa/dpd_db/exporter/: README.md  deconstructor_exporter.py  export_dpd.py  export_epd.py  export_help.py  export_roots.py  export_variant_spelling.py  exporter.py  helpers.py  mdict_exporter.py  tpr_exporter.py
simsapa/dpd_db/tools/: configger.py  exporter_functions.py  link_generator.py  meaning_construction.py  niggahitas.py  pali_alphabet.py  pali_sort_key.py  paths.py  pos.py  sandhi_contraction.py  superscripter.py  utils.py
simsapa/keyboard/: .coveragerc  MANIFEST.in  Makefile  README.md
simsapa/keyboard/examples/: pressed_keys.py  segmented_macro.py  (+3 more)
simsapa/layouts/: asset_management.py  bookmark_dialog.py  bookmarks_browser.py  cards_browser.py  create_search_index.py  dictionaries_manager.py  dictionary_queries.py  dictionary_search.py  dictionary_select_dialog.py  document_reader.py  download_appdata.py  download_dpd.py  ebook_reader.py  error_message.py  find_panel.py  fulltext_list.py  gpt_prompts.py  gui_helpers.py  gui_queries.py  gui_types.py  help_info.py  html_content.py  import_stardict_dialog.py  import_suttas_dialog.py  library_browser.py  links_browser.py  links_sidebar.py  memo_dialog.py  memo_sidebar.py  memos_browser.py  memos_sidebar.py  notes_browser.py  pali_course_helpers.py  pali_course_practice.py  pali_courses_browser.py  preview_window.py  query_worker.py  reader_web.py  results_list.py  search_info.py  (+23 more)
simsapa/migrations/: create_schema.sql
src-ts/: helpers.ts  index.d.ts  qt_channel_helpers.ts  simsapa.ts  tsconfig.json
tests/: test_basic.py  test_dictionary.py  test_document.py  test_helpers.py  test_html_render_dictionary.py  test_html_render_sutta.py  test_link.py  test_memo.py  test_pali_stemmer.py  test_query_task.py  test_render_sutta_content.py  test_search_combined.py  test_search_dpd_lookup.py  test_search_index.py  test_sutta.py  test_sutta_ref_recognition.py
tests/data/: Makefile  create_schema.py  fts_indexes.sql  reindex_fts.sql  sn1.61_en_sujato.html
tests/old/: x_test_dictionary.py
tests/support/: helpers.py
typings/tantivy/: __init__.pyi
(+92 files in other folders)
