[tool.poetry]
name = "simsapa"
version = "0.3.0-alpha.1"
description = "Simsapa Dhamma Reader - Buddhist suttas and Pali dictionary"
# pypi identification
authors = ["Gambhiro <profound.labs@gmail.com>"]
license = "MIT"

# NOTE: Version updates:
# - tool.poetry.version (above)
# - simsapa.db_version
# - tool.briefcase.version
# - simsapa/__init__.py SIMSAPA_APP_VERSION

[simsapa]
db_version = "0.3.0-alpha.1"

[tool.poetry.dependencies]
python = "~3.11"
PyQt6 = "~6.4.0"
# Check poetry.lock Qt version matches with briefcase workflow yml
PyQt6-Qt6 = "~6.4.2"
PyQt6-WebEngine = "~6.4.0"
PyQt6-WebEngine-Qt6 = "~6.4.2"
PyYAML = "~6.0.0"
SQLAlchemy = "~1.4.45"
SQLAlchemy-Utils = "~0.39.0"
types-sqlalchemy-utils = "~1.0.1"
sqlalchemy2-stubs = "^0.0.2a31"
alembic = "~1.8.1"
requests = "~2"
appdirs = "~1.4.4"
PyPDF2 = "~1.26.0"
epub_meta = "~0.0.7"
PyMuPDF = "~1"
Pillow = "~9.3.0"
pandas = "~1"
openpyxl = "~3.0.10"
semver = "~2.13.0"
pyglossary = "~4"
lxml = "~4.9.2"
python-dotenv = "~0.21.0"
pyperclip = "~1.8.2"
networkx = "~2"
bokeh = "~2"
scipy = "~1.10.0"
# For building on MacOS 11
#scipy = { file = "scipy-1.10.0-cp311-cp311-macosx_11_0_arm64.whl" }
python-idzip = "~0.3.7"
Whoosh = "~2.7.4"
typer = "~0.7.0"
tomlkit = "~0.11.6"
feedparser = "~6.0.10"
#pyqtkeybind = [{ version = "~0.0.9", platform = "linux" },]
beautifulsoup4 = "~4.11.1"
MarkupSafe = "~2.1.1"
Mako = "~1.2.4"
Flask = "~2.2.2"
Flask-Cors = "~3.0.10"
aksharamukha = "~2.0.4"
markdown = "^3.4.1"
psutil = "^5.9.4"
roman = "^3.3"
chardet = "^5.1.0"

# NOTE: charset-normalizer = "^3.0.1" errors with PyInstaller
# ModuleNotFoundError: No module named 'charset_normalizer.md__mypyc'
# https://stackoverflow.com/questions/74182807/no-module-named-charset-normalizer-md-mypyc
charset-normalizer = "==2.1.0"
ebooklib = "^0.18"
bleach = "^6.0.0"
openai = "^0.26.5"
transformers = "^4.26.1"

[tool.poetry.scripts]
simsapa = 'simsapa.runner:main'

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.7"
tuna = { git = "https://github.com/nschloe/tuna.git" }

# scalene = "^1.5.14"

pytest = "~7.2.0"
pyArango = "~2.0.0"
html5lib = "^1.1"
selenium = "^4.7.2"
dmgbuild = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.briefcase]
project_name = "Simsapa Dhamma Reader"
bundle = "io.github"
# briefcase requires PEP440 version strings
version = "0.3.0a1"
url = "https://github.com/simsapa/simsapa"
license = "MIT license"
# Package will display this info
author = 'Profound Labs'
author_email = "profound.labs@gmail.com"

[tool.briefcase.app.simsapa]
formal_name = "Simsapa Dhamma Reader"
description = "Buddhist suttas and Pali dictionary"
icon = "simsapa/assets/icons/appicons/simsapa"
sources = ['simsapa']

requires = [
"PyQt6              >= 6.4.0,    < 6.5.0",
"PyQt6-Qt6           == 6.4.2",
"PyQt6-WebEngine    >= 6.4.0,    < 6.5.0",
"PyQt6-WebEngine-Qt6 == 6.4.2",
"PyYAML             >= 6.0.0,    < 6.1.0",
"SQLAlchemy         >= 1.4.45,   < 1.5.0",
"SQLAlchemy-Utils   >= 0.39.0,   < 0.40.0",
"types-sqlalchemy-utils >= 1.0.1, < 1.1.0",
"sqlalchemy2-stubs  >= 0.0.2a31, < 0.1.0",
"alembic            >= 1.8.1,    < 1.9.0",
"requests           >= 2.25.0,   < 3.0.0",
"appdirs            >= 1.4.4,    < 1.5.0",
"PyPDF2             >= 1.26.0,   < 1.27.0",
"epub_meta          >= 0.0.7,    < 0.1.0",
"PyMuPDF            >= 1.18.0,   < 2.0.0",
"Pillow             >= 9.3.0,    < 9.4.0",
"pandas             >= 1.2.0,    < 2.0.0",
"openpyxl           >= 3.0.10,   < 3.1.0",
"semver             >= 2.13.0,   < 2.14.0",
"pyglossary         >= 4.0.0,    < 5.0.0",
"lxml               >= 4.9.2,    < 5.0.0",
"python-dotenv      >= 0.21.0,   < 0.22.0",
"pyperclip          >= 1.8.2,    < 1.9.0",
"networkx           >= 2.5.0,    < 3.0.0",
"bokeh              >= 2.4.0,    < 3.0.0",
"scipy              >= 1.10.0,   < 2.0.0",
"python-idzip       >= 0.3.7,    < 0.4.0",
"Whoosh             >= 2.7.4,    < 2.8.0",
"typer              >= 0.7.0,    < 0.8.0",
"tomlkit            >= 0.11.0,   < 0.12.0",
"feedparser         >= 6.0.10,   < 6.1.0",
"beautifulsoup4     >= 4.11.1,   < 4.12.0",
"MarkupSafe         == 2.1.1",
"Mako               >= 1.2.4,    < 1.3.0",
"Flask              >= 2.2.2,    < 2.3.0",
"Flask-Cors         >= 3.0.10,   < 3.1.0",
"aksharamukha       >= 2.0.4,    < 2.1.0",
"markdown           >= 3.4.1,    < 3.5.0",
"psutil             >= 5.9.4,    < 5.10.0",
"roman              >= 3.3,      < 4.0",
"chardet            >= 5.1.0,    < 5.2.0",
"charset-normalizer == 2.1.0",
"ebooklib           >= 0.18.0,   < 0.19.0",
"bleach             >= 6.0.0,    < 7.0.0",
"openai             >= 0.26.5,   < 0.27.0",
"transformers       >= 4.26.1,   < 4.27.0",
]

[tool.briefcase.app.simsapa.macOS]
requires = []

[tool.briefcase.app.simsapa.linux]
requires = [
#"pyqtkeybind >= 0.0.9, < 0.1.0",
]

system_requires = ["libtiff-dev"]

[tool.briefcase.app.simsapa.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.simsapa.iOS]
requires = []

[tool.briefcase.app.simsapa.android]
requires = []
